--- a/e-com_frontend/src/pages/Home.css
+++ b/e-com_frontend/src/pages/Home.css
@@ -3,14 +3,20 @@
 }
 
 #hero {
-    width: 900px;       /* Set desired width */
-    height: 500px;      /* Set desired height */
+    width: 80%;         /* Set desired width */
+    height: auto;        /* Set desired height */
     margin: auto;       /* Center horizontally */
     overflow: hidden;   /* Hide overflow if needed */
 }
 
 .carousel-item img {
     width: 100%;
-    height: 100%;
+    height: 500px;
     object-fit: cover; /* Ensures image fills the area nicely */
+}
+
+@media (max-width: 576px) {
+    .carousel-item img {
+      height: 250px;
+    }
 }
