Checkout and Confirmation page added

--- a/e-com_frontend/src/index.css
+++ b/e-com_frontend/src/index.css
@@ -32,6 +32,10 @@ body {
   background-color: #fdf6e3;
 }
 
+html {
+  background-color: #fdf6e3;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
